<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:id="@+id/activity_main_scrollview"
    android:layout_above="@+id/footer"
    android:layout_alignParentTop="true">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_main_padding_form"
        tools:context=".ActivityMain">

        <EditText
            android:id="@+id/activity_main_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_nombre" />

        <EditText
            android:id="@+id/activity_main_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_tel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_escolaridad"
            android:textColor="@color/colorBlack" />

        <Spinner
            android:id="@+id/activity_main_escolaridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           ></Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_genero"
            android:textColor="@color/colorBlack" />

        <RadioGroup
            android:id="@+id/activity_main_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/activity_main_genero_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/activity_main_genero_femenino" />

            <RadioButton
                android:id="@+id/activity_main_genero_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/activity_main_genero_masculino" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_libro"
            android:textColor="@color/colorBlack" />


        <AutoCompleteTextView
            android:id="@+id/activity_main_libro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/activity_main_deporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/activity_main_deporte" />




    </LinearLayout>

</ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_padding_form"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/activity_main_limpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/activity_main_limpiar" />

    </RelativeLayout>
</RelativeLayout>

